--- a/Concessão_de_Crédito_com_Machine_Learning.ipynb
+++ b/Concessão_de_Crédito_com_Machine_Learning.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Concessão de Crédito com Machine Learning.ipynb",
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -13,6 +14,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/tpessoa-dev/plataformas-cognitivas/blob/main/Concess%C3%A3o_de_Cr%C3%A9dito_com_Machine_Learning.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
