--- a/Concessão_de_Crédito_com_Machine_Learning.ipynb
+++ b/Concessão_de_Crédito_com_Machine_Learning.ipynb
@@ -51,10 +51,10 @@
       "source": [
         "#@title Parâmetros da solução\n",
         "#@markdown Informe a quantidade de clientes que devem ser analisados.\n",
-        "qtde_clientes = 4  #@param {type: \"slider\", min: 1, max: 10}\n",
+        "qtde_clientes = 6  #@param {type: \"slider\", min: 1, max: 10}\n",
         "\n",
         "#@markdown Informe o IP do servidor de predição da sua solução:\n",
-        "my_server_ip = \"104.197.138.163\" #@param {type:\"string\"}\n",
+        "my_server_ip = \"35.222.152.218\" #@param {type:\"string\"}\n",
         "\n",
         "#@markdown Informe a porta do servidor de predição da sua solução, se nada foi alterado, deve ser 443:\n",
         "my_server_port = \"443\" #@param {type:\"string\"}\n",
@@ -62,7 +62,7 @@
         "\n",
         "#@markdown Ah, e não se esqueça de executar esta célula!\n"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -75,7 +75,7 @@
         "import pandas as pd\n",
         "import json"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -101,7 +101,7 @@
         "response_content = response.text.encode('utf8').decode()\n",
         "clientes = pd.read_json(response_content)"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -110,14 +110,14 @@
         "id": "Yg6oYQyw_sXc",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 190
+          "height": 235
         },
-        "outputId": "3bd13025-a106-4300-a038-4892ab476ecb"
+        "outputId": "42d6a250-40fb-4ec5-c6fd-5ad448ed699c"
       },
       "source": [
         "clientes"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -154,71 +154,97 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>22672</th>\n",
-              "      <td>Daniel, Wu</td>\n",
-              "      <td>4028.099732</td>\n",
-              "      <td>35.959014</td>\n",
-              "      <td>1</td>\n",
+              "      <th>11662</th>\n",
+              "      <td>Jesse, Jones</td>\n",
+              "      <td>3985.035660</td>\n",
+              "      <td>55.220183</td>\n",
               "      <td>0</td>\n",
               "      <td>1</td>\n",
               "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>2</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3029</th>\n",
-              "      <td>Brian, Wright</td>\n",
-              "      <td>3290.165416</td>\n",
-              "      <td>37.610771</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>2</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>19240</th>\n",
-              "      <td>Andre, Dave</td>\n",
-              "      <td>2919.327934</td>\n",
-              "      <td>20.430507</td>\n",
-              "      <td>1</td>\n",
+              "      <th>11215</th>\n",
+              "      <td>Jahlysa, Tran</td>\n",
+              "      <td>3017.500093</td>\n",
+              "      <td>25.750213</td>\n",
               "      <td>0</td>\n",
               "      <td>1</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
-              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>44198</th>\n",
-              "      <td>Alma Ruby, Cordova</td>\n",
-              "      <td>2741.916209</td>\n",
-              "      <td>28.612836</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
+              "      <th>46709</th>\n",
+              "      <td>Meagan, Monarrez</td>\n",
+              "      <td>4373.593186</td>\n",
+              "      <td>43.462012</td>\n",
               "      <td>0</td>\n",
               "      <td>1</td>\n",
               "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>18231</th>\n",
+              "      <td>Victor, Hernandez</td>\n",
+              "      <td>3665.541064</td>\n",
+              "      <td>28.507155</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>33367</th>\n",
+              "      <td>Jasmine, Moreno</td>\n",
+              "      <td>3482.393954</td>\n",
+              "      <td>35.719835</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7410</th>\n",
+              "      <td>Renee, Moquino</td>\n",
+              "      <td>3177.975340</td>\n",
+              "      <td>37.891813</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "                     nome        renda  ...  estadocivil  escolaridade\n",
-              "22672          Daniel, Wu  4028.099732  ...            0             2\n",
-              "3029        Brian, Wright  3290.165416  ...            0             2\n",
-              "19240         Andre, Dave  2919.327934  ...            0             1\n",
-              "44198  Alma Ruby, Cordova  2741.916209  ...            1             1\n",
+              "                    nome        renda  ...  estadocivil  escolaridade\n",
+              "11662       Jesse, Jones  3985.035660  ...            0             2\n",
+              "11215      Jahlysa, Tran  3017.500093  ...            0             2\n",
+              "46709   Meagan, Monarrez  4373.593186  ...            1             2\n",
+              "18231  Victor, Hernandez  3665.541064  ...            1             2\n",
+              "33367    Jasmine, Moreno  3482.393954  ...            1             0\n",
+              "7410      Renee, Moquino  3177.975340  ...            1             2\n",
               "\n",
-              "[4 rows x 9 columns]"
+              "[6 rows x 9 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 42
+          "execution_count": 4
         }
       ]
     },
@@ -243,7 +269,7 @@
         "headers = {'Content-Type': 'application/json'}\n",
         "conteudo = clientes.to_json()"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -251,33 +277,34 @@
       "metadata": {
         "id": "ufspC1N0ExsM",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 102
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8b80d40e-9277-4d04-dd73-685e8de55ae0"
+        "outputId": "4bae2809-c3ad-42ba-908f-7f45abf3d7b1"
       },
       "source": [
         "response01 = requests.request(\"POST\", url + \"?model=modelo01\", headers=headers, data=conteudo)\n",
         "respostas01 = json.loads(response01.text.encode('utf8').decode())\n",
         "respostas01"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{'prediction': [0, 1, 1, 1],\n",
-              " 'proba': [[0.9712613311116339, 0.02873866888836604],\n",
-              "  [0.10609475169972526, 0.8939052483002747],\n",
-              "  [0.16488817236745124, 0.8351118276325488],\n",
-              "  [0.006931977891545316, 0.9930680221084547]]}"
+              "{'prediction': [0, 1, 0, 0, 0, 0],\n",
+              " 'proba': [[0.9228494245453985, 0.07715057545460144],\n",
+              "  [0.04597488365257296, 0.954025116347427],\n",
+              "  [0.9953121687214376, 0.004687831278562434],\n",
+              "  [0.9373435728672841, 0.06265642713271591],\n",
+              "  [0.8977153416335896, 0.10228465836641044],\n",
+              "  [0.7535118402624263, 0.2464881597375737]]}"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 65
+          "execution_count": 6
         }
       ]
     },
@@ -290,7 +317,7 @@
         "df_01 = pd.Series(respostas01['prediction'], index = clientes.index, name=\"PredicaoML01\")\n",
         "df_01B = pd.Series(respostas01['proba'], index = clientes.index, name=\"PredicaoML01B\")"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -298,32 +325,33 @@
       "metadata": {
         "id": "3X_p_bAPFXhr",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 85
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "209879fc-d4b3-41a0-f610-d0862038a978"
+        "outputId": "8c6a2f30-4e7e-4b0f-a10d-ec3359c9229f"
       },
       "source": [
         "response02 = requests.request(\"POST\", url + \"?model=modelo02\", headers=headers, data=conteudo)\n",
         "respostas02 = json.loads(response02.text.encode('utf8').decode())\n",
         "respostas02"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{'prediction': [-0.010159329576254223,\n",
-              "  0.5917030901875656,\n",
-              "  0.6236547836165044,\n",
-              "  1.0260868020451164]}"
+              "{'prediction': [0.13534460157225717,\n",
+              "  1.0711610170621109,\n",
+              "  0.02057058726599434,\n",
+              "  0.04166179721793638,\n",
+              "  0.24266802936497,\n",
+              "  0.27502317856286396]}"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 67
+          "execution_count": 8
         }
       ]
     },
@@ -335,7 +363,7 @@
       "source": [
         "df_02 = pd.Series(respostas02['prediction'], index = clientes.index, name=\"PredicaoML02\")"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -344,9 +372,9 @@
         "id": "KrVb0COfE2p6",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 173
+          "height": 235
         },
-        "outputId": "b89db516-54f8-43f5-9a7d-2d6899971e91"
+        "outputId": "a54d29a2-793e-4c77-8ba5-d001d443e762"
       },
       "source": [
         "pd.DataFrame(clientes.loc[:,\"nome\"])\\\n",
@@ -354,7 +382,7 @@
         "    .merge(df_01B, left_index=True, right_index=True)\\\n",
         "    .merge(df_02, left_index=True, right_index=True)"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -386,64 +414,92 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>22672</th>\n",
-              "      <td>Daniel, Wu</td>\n",
+              "      <th>11662</th>\n",
+              "      <td>Jesse, Jones</td>\n",
               "      <td>0</td>\n",
-              "      <td>[0.9712613311116339, 0.02873866888836604]</td>\n",
-              "      <td>-0.010159</td>\n",
+              "      <td>[0.9228494245453985, 0.07715057545460144]</td>\n",
+              "      <td>0.135345</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>3029</th>\n",
-              "      <td>Brian, Wright</td>\n",
+              "      <th>11215</th>\n",
+              "      <td>Jahlysa, Tran</td>\n",
               "      <td>1</td>\n",
-              "      <td>[0.10609475169972526, 0.8939052483002747]</td>\n",
-              "      <td>0.591703</td>\n",
+              "      <td>[0.04597488365257296, 0.954025116347427]</td>\n",
+              "      <td>1.071161</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>19240</th>\n",
-              "      <td>Andre, Dave</td>\n",
-              "      <td>1</td>\n",
-              "      <td>[0.16488817236745124, 0.8351118276325488]</td>\n",
-              "      <td>0.623655</td>\n",
+              "      <th>46709</th>\n",
+              "      <td>Meagan, Monarrez</td>\n",
+              "      <td>0</td>\n",
+              "      <td>[0.9953121687214376, 0.004687831278562434]</td>\n",
+              "      <td>0.020571</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>44198</th>\n",
-              "      <td>Alma Ruby, Cordova</td>\n",
-              "      <td>1</td>\n",
-              "      <td>[0.006931977891545316, 0.9930680221084547]</td>\n",
-              "      <td>1.026087</td>\n",
+              "      <th>18231</th>\n",
+              "      <td>Victor, Hernandez</td>\n",
+              "      <td>0</td>\n",
+              "      <td>[0.9373435728672841, 0.06265642713271591]</td>\n",
+              "      <td>0.041662</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>33367</th>\n",
+              "      <td>Jasmine, Moreno</td>\n",
+              "      <td>0</td>\n",
+              "      <td>[0.8977153416335896, 0.10228465836641044]</td>\n",
+              "      <td>0.242668</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7410</th>\n",
+              "      <td>Renee, Moquino</td>\n",
+              "      <td>0</td>\n",
+              "      <td>[0.7535118402624263, 0.2464881597375737]</td>\n",
+              "      <td>0.275023</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "                     nome  ...  PredicaoML02\n",
-              "22672          Daniel, Wu  ...     -0.010159\n",
-              "3029        Brian, Wright  ...      0.591703\n",
-              "19240         Andre, Dave  ...      0.623655\n",
-              "44198  Alma Ruby, Cordova  ...      1.026087\n",
+              "                    nome  ...  PredicaoML02\n",
+              "11662       Jesse, Jones  ...      0.135345\n",
+              "11215      Jahlysa, Tran  ...      1.071161\n",
+              "46709   Meagan, Monarrez  ...      0.020571\n",
+              "18231  Victor, Hernandez  ...      0.041662\n",
+              "33367    Jasmine, Moreno  ...      0.242668\n",
+              "7410      Renee, Moquino  ...      0.275023\n",
               "\n",
-              "[4 rows x 4 columns]"
+              "[6 rows x 4 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 69
+          "execution_count": 10
         }
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "xoppo_YQE-mt"
+        "id": "vdES6tsg2F2l"
       },
       "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+        "# **Conclusão**\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "O9jiboEu2TvF"
+      },
+      "source": [
+        "O cliente **Jahlysa, Tran** aponta com grande risco de Default e portanto terá o empréstimo negado.\n",
+        "\n",
+        "O cliente **Meagan, Monarrez** apresenta o mais alto score para bom pagador e portanto pode contar com linhas de créditos diferenciadas\n",
+        "\n",
+        "Os demais clientes apresentam scores positivos e podem contar com linhas de crédito padrão."
+      ]
     }
   ]
 }
